--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,8 @@ enable_testing()
 add_executable(
     parser_test
     test.cpp
-    parser.cpp
     )
 target_include_directories(parser_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/boost_1_79_0)
-target_link_libraries(parser_test gtest_main)
+target_link_libraries(parser_test gtest_main parser)
 include(GoogleTest)
 gtest_discover_tests(parser_test)
